# runbot

./: .envrc.sample  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  table.toml
.github/workflows/: ci.yml
runbot/: Cargo.toml
runbot-discord/: Cargo.toml
runbot-discord/src/: code_input.rs  command_context.rs  compile_result.rs  config_file.rs  display.rs  error.rs  lib.rs  runbot.rs  table.rs  table_loader.rs  type_key.rs
runbot/src/: action.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  model.rs  setting.rs  table.rs
runbot/src/action/: dump_setting.rs  list_compilers.rs  list_languages.rs  remap_language.rs  run.rs  run_implicit.rs  set_auto.rs  set_auto_save.rs
runbot/src/model/: channel_id.rs  code.rs  compiler.rs  compiler_options.rs  compiler_spec.rs  guild_id.rs  language.rs
wandbox/: Cargo.toml
wandbox/src/: api.rs  compile.rs  error.rs  lib.rs  list.rs
wandbox/src/api/: compile.rs  list.rs
wandbox/src/blocking/: client.rs
