[package]
name = "runbot-discord"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "runbot_discord"

[[bin]]
path = "src/runbot.rs"
name = "runbot-discord"

[dependencies]
serenity = "0.8.6"
itertools = "0.9.0"
strip-ansi-escapes = "0.1.0"
shell-words = "1.0.0"
err-derive = "0.2.4"
tabular = "0.1.4"
parking_lot = "0.10.2"
redis = "0.16.0"
rustc-hash = "1.1.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
runbot = { path = "../runbot" }
wandbox = { path = "../wandbox" }
