[package]
name = "runbot"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "runbot"

[dependencies]
itertools = "0.9.0"
wandbox = { path = "../wandbox" }
redis = "0.16.0"
err-derive = "0.2.4"
parking_lot = "0.10.2"
ref-cast = "1.0.1"
derive_more = "0.99.7"
